@@ -85,6 +85,7 @@
    - stevesk@cvs.openbsd.org 2006/08/04 20:46:05
      [monitor.c session.c ssh-agent.c]
      spaces
+ - (djm) [auth-pam.c defines.h] Move PAM related bits to auth-pam.c
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
@@ -5155,4 +5156,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4453 2006/08/05 02:40:11 djm Exp $
+$Id: ChangeLog,v 1.4454 2006/08/05 02:43:32 djm Exp $
